# zat-tree-sitter-viewer

./: Cargo.toml
queries/: cpp.json  cpp.scm  python.json  rust.json
src/: main.rs
